--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Updock&display=swap');
 
 /* @layer components {
     .sidebar-icon {
@@ -15,12 +16,5 @@
 html {
     background-image: url('./assets/bg_decoration.jpg');
     background-size: auto;
-}
-
-.parchment {
-    height: 50vh;
-    background-image: url('https://th.bing.com/th/id/R.31873b285b48fec6173bc1fc604e16c5?rik=g09IGt9G68XnHA&pid=ImgRaw&r=0');
-    background-repeat: no-repeat;
-    background-size: contain;
 }
 
