--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,27 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Updock&display=swap');
 
-/* @layer components {
-    .sidebar-icon {
-        @apply relative flex items-center justify-center 
-        h-12 w-12 mt-2 mb-2 mx-auto shadow-lg 
-        bg-green-900 text-white hover:bg-green-600 
-        rounded-3xl hover:rounded-xl
-        transition-all duration-300 ease-linear;
+@layer components {
+    .nav-link {
+        @apply bg-red-600 hover:bg-red-500 rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear shadow-lg;
     }
-} */
+}
 
 html {
     background-image: url('./assets/bg_decoration.jpg');
     background-size: auto;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/* .about, .photos {
+    display: flex;
+    height: 90vh;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+} */
