--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,25 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Updock&display=swap');
 
+:root {
+    --photo-bg: rgba(252, 230, 230, 0.9);
+}
+
 @layer components {
     .nav-link {
         @apply bg-red-600 hover:bg-red-500 rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear shadow-lg;
+    }
+
+    .photo {
+        @apply m-2 p-5 max-h-96 rounded-xl shadow-lg;
     }
 }
 
 html {
     background-image: url('./assets/bg_decoration.jpg');
     background-size: auto;
+    background-attachment: fixed;
+    overflow-x: hidden;
 }
 
 * {
@@ -20,10 +30,14 @@ html {
     padding: 0;
 }
 
-/* .about, .photos {
+.photo {
+    background: var(--photo-bg)
+}
+
+.about {
     display: flex;
     height: 90vh;
     align-items: center;
     justify-content: center;
     font-size: 3rem;
-} */
+}
