Finished the countdown page

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,9 @@ html {
     background-attachment: fixed;
     /* overflow-x: hidden; */
 }
+body {
+    display: flex;
+}
 
 * {
     box-sizing: border-box;
