--- a/src/pages/DearSanta.css
+++ b/src/pages/DearSanta.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Young+Serif&display=swap');
 
 :root {
-    --photo-bg: rgba(252, 230, 230, 0.9);
-    --magnify-bg: rgba(142, 142, 142, 0.9);
     --text-color: rgba(34, 25, 25, 1);
-    --about-bg: rgba(235, 235, 235, 0.9);
+    --form-bg: rgba(215, 215, 215, 0.9);
 }
 
 
@@ -13,7 +11,7 @@
 }
 
 form {
-    background-color: var(--about-bg);
+    background-color: var(--form-bg);
     width: 90%;
 }
 
@@ -26,7 +24,7 @@ form {
 }
 
 textarea {
-    width: 90%;
+    width: 95%;
     height: 30vh;
 }
 
@@ -39,3 +37,16 @@ label {
     font-family: 'Berkshire Swash', serif;
     color: var(--text-color);
 }
+
+.submit {
+    margin: 0 auto;
+}
+
+.submit:hover {
+    transform: scale(1.02);
+    transition: 350ms;
+}
+ form img {
+    width: 350px;
+    margin: 0 auto;
+ }
