--- a/src/pages/Countdown.css
+++ b/src/pages/Countdown.css
@@ -41,17 +41,33 @@
     z-index: -1;
     animation: sleigh 10s linear infinite;
 }
+
 @keyframes sleigh {
     0% {
-        left: 30%;
+        left: 35%;
         opacity: 0;
     }
     50% {
-        left: 50%;
+        left: 47%;
         opacity: 1;
     }
     100% {
         left: 60%;
         opacity: 0;
+    }
+}
+
+.christmas {
+    animation: christmas 1.5s linear infinite;
+}
+@keyframes christmas {
+    0% {
+        color: #991b1b
+    }
+    50% {
+        color: #14532d
+    }
+    100% {
+        color: #991b1b
     }
 }
