fixed the nav bar bug where the photos popped up over the nav bar when hovered over. Also fixed the width of the form

--- a/src/pages/DearSanta.css
+++ b/src/pages/DearSanta.css
@@ -13,7 +13,7 @@
 form {
     background-color: var(--form-bg);
     width: 85%;
-    max-width: 350px;
+    min-width: 350px;
 }
 
 .map-container {
