--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -10,7 +10,6 @@
     background-color: var(--tw-red-8);
     height: 80px;
     display: flex;
-    justify-content: start;
     align-items: center;
 }
 
@@ -35,12 +34,13 @@
 .nav-menu.active {
     left: 0;
     transition: 350ms;
+    position: fixed;
+    z-index: 100;
 }
 
 .nav-text {
     font-family: 'Berkshire Swash', serif;
     display: flex;
-    justify-content: start;
     align-items: center;
     padding: 8px 0 9px 16px;
     list-style: none;
@@ -68,7 +68,6 @@
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start; 
     align-items: center;
 }
 
