fixed the bug so that the photos fit within the screen for phone users

--- a/src/pages/Photos.css
+++ b/src/pages/Photos.css
@@ -15,6 +15,7 @@
 .full-screen img {
     user-select: none;
     -webkit-user-select: none;
+    max-width: 100%;
 }
 
 .gallery-wrap .single img:hover {
